--- a/.github/workflows/docker-build-umee-exporter.yaml
+++ b/.github/workflows/docker-build-umee-exporter.yaml
@@ -13,6 +13,10 @@ jobs:
     - name: Check Out Repository
       uses: actions/checkout@v2
 
+    - name: Lowercase Repository Owner
+      id: repo_owner
+      run: echo "REPO_OWNER=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v1
       with:
@@ -26,4 +30,4 @@ jobs:
         context: .umee/umee-pricefeeder-exporter
         file: .umee/umee-pricefeeder-exporter/Dockerfile
         push: true
-        tags: ghcr.io/${{ github.repository_owner }}/umee-pricefeeder-exporter:latest
+        tags: ghcr.io/${{ env.REPO_OWNER }}/umee-pricefeeder-exporter:latest
