--- a/berachain-beacon-data/validators.yaml
+++ b/berachain-beacon-data/validators.yaml
@@ -139,3 +139,4 @@ validators:
   - "36A4C6542AA919F0B718594F70FA2BFB253232F5:Amber-group"
   - "BEE4C22BF8CD93B103B94DA56145DC1BA4F05E70:Pump-BTC"
   - "85C9FD809388DDF8C937DBF7C3A2387F5145EDAA:SBI-Defimans"
+  - "29514312761481A9E19FB99148BAE0C0D675E799:Auros"
